<resources>
    <string name="app_name">StunnelAndroid</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_server_address">Server address</string>
    <string name="title_server_port">Server port</string>
    <string name="title_choose_cert">Choose cert file</string>
    <string name="title_service_status">Service status:</string>
    <string name="title_log">Log</string>
    <string name="btn_save">Save</string>
    <string name="title_local_port">Local port</string>
    <string name="running">Stunnel service is running</string>
    <string name="menu_view_stunnel_log">Stunnel Log</string>
    <string name="menu_clear_config">Clear config</string>
</resources>
